--- a/Project/retinal vessel segmentation/src/CMakeLists.txt
+++ b/Project/retinal vessel segmentation/src/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories( ${OpenCV_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_
 SET(PROJECT_SOURCES main.cpp utils.cpp vesseldetector.cpp)
 SET(PROJECT_HEADERS utils.h vesseldetector.h)
 
+SET(CMAKE_EXE_LINKER_FLAGS "/STACK:900000000")
+
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
 
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
